--- a/main.html
+++ b/main.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Profile Page</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <div class="container">
+        <section id="name">
+            <h2>Name</h2>
+            <p>Your Full Name</p>
+        </section>
 
+        <section id="email">
+            <h2>Email</h2>
+            <p>your.email@example.com</p>
+        </section>
+
+        <section id="profile">
+            <h2>Profile</h2>
+            <p>The profile for which you are applying</p>
+        </section>
+
+        <section id="about-me">
+            <h2>About Me</h2>
+            <p>A brief description of yourself.</p>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <!-- Here you can use icons, badges, and percentage bars -->
+            <div class="skill">
+                <span>HTML</span>
+                <div class="progress-bar"><div class="progress" style="width: 90%;"></div></div>
+            </div>
+            <div class="skill">
+                <span>CSS</span>
+                <div class="progress-bar"><div class="progress" style="width: 80%;"></div></div>
+            </div>
+           
+        </section>
+    </div>
+</body>
+</html>
