--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
             <p>The profile for which you are applying</p>
         </section>
 
-        <section id="about-me">
+        <section >
             <h2>About Me</h2>
             <p>A brief description of yourself.</p>
         </section>
