--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 
         <section >
             <h2>About Me</h2>
-            <p>A brief description of yourself.</p>
+            <content>A brief description of yourself.</content>
         </section>
 
         <section id="skills">
