--- a/main.html
+++ b/main.html
@@ -24,13 +24,13 @@
         </section>
 
         <section >
-            <h2>About Me</h2>
+            <h2>About me</h2>
             <content>A brief description of yourself.</content>
         </section>
 
         <section id="skills">
             <h2>Skills</h2>
-            <!-- Here you can use icons, badges, and percentage bars -->
+            
             <div class="skill">
                 <span>HTML</span>
                 <div class="progress-bar"><div class="progress" style="width: 90%;"></div></div>
